Fix code block overflow on mobile

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -17,6 +17,11 @@ img {
   height: auto;
 }
 
+pre {
+  overflow-x: auto;
+  max-width: 100%;
+}
+
 a:hover { color: #d70606; }
 
 .post-tags a {
